# STATRO-PEFT

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  SMOKE_TEST_REPORT.md  TRAINING_REPORTS_GUIDE.md  docker-compose.yml  inspect_gpt2.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  smoke_test.py  test_lora_detailed.py  test_strato_core.py
configs/: base_config.yaml  gpt2_smoke_test.yaml  llama2_7b_mmlu_lora.yaml  llama2_7b_mmlu_strato.yaml
docker/: entrypoint.sh  healthcheck.py
scripts/: deploy_docker.sh  docker_run.sh  one_click_deploy.sh  setup_gpu_drivers.sh  setup_project_structure.sh  setup_python_env.sh  verify_gpu.sh
src/evaluation/: __init__.py  evaluator.py
src/peft/: __init__.py  adalora.py  base_peft.py  dora.py  lora.py  peft_factory.py  strato_peft.py
src/tasks/: __init__.py  base_task.py  language_modeling.py  multiple_choice.py  question_answering.py  task_factory.py  text_classification.py
src/training/: __init__.py  base_trainer.py  callbacks.py  peft_trainer.py  strato_trainer.py
src/utils/: __init__.py  config_utils.py  logging_utils.py  reproducibility_utils.py
